<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clChangePasswordActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.change.ChangePasswordActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/Widget.Material3.FloatingActionButton.Tertiary"
        android:id="@+id/btn_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/ic_arrow_right_regular"
        app:backgroundTint="@color/blue"
        app:tint="@color/white"
        android:enabled="false"
        android:contentDescription="@string/button_next_change_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notice_change_password"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:background="#EFEFEF"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:id="@+id/text_input_password_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password_old"
            android:textColorHint="#8C8C8C"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:endIconMode="password_toggle"
            app:counterMaxLength="40">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="40"
                android:inputType="textPassword"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:id="@+id/text_input_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password_new"
            android:textColorHint="#8C8C8C"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:endIconMode="password_toggle"
            app:counterMaxLength="40">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="40"
                android:inputType="textPassword"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:id="@+id/text_input_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password_confirm"
            android:textColorHint="#8C8C8C"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:endIconMode="password_toggle"
            app:counterMaxLength="40">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="40"
                android:inputType="textPassword"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>