<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.Material3.CardView.Outlined"
    app:cardCornerRadius="0dp"
    app:strokeWidth="0dp"
    app:contentPaddingLeft="@dimen/_10sdp"
    app:contentPaddingRight="@dimen/_10sdp"
    app:contentPaddingBottom="@dimen/_10sdp"
    app:contentPaddingTop="@dimen/_10sdp"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.18"
            >
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imv_avatar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:shapeAppearanceOverlay="@style/Circular"
                android:src="@drawable/ic_default_user"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/view_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.52"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2sdp"
                android:text="@string/user_text"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/black"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceLabelLarge" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/text_phone_number"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/greyLight"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceLabelLarge" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_friend"
                android:backgroundTint="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_friend_text"
                android:visibility="gone"
                android:textColor="@color/white"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txv_in_friend_relationship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Đã là bạn"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:textSize="@dimen/_12ssp"
                android:visibility="visible"
                />
        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>